--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,9 @@ option {
     background-color: #f8f9fb;
 }
 
-
+.tab-list-active {
+    background-color: #6DB746;
+}
 
 .form-select,
 option {
@@ -75,7 +77,7 @@ option {
 }
 
 .fees-descr {
-    padding: 0 !important;
+    padding: 0 !important;font-size: 14px; line-height: 20px; color: #787f84; font-weight: 400; font-family: 'Lato', sans-serif;
 }
 
 .fees-tab {
