--- a/src/style.css
+++ b/src/style.css
@@ -390,3 +390,52 @@ input[type='radio']:disabled+label::before {
     background-color: #6db744;
     color: #ffffff;
 }
+
+
+
+.input-file-wrap {
+    position: relative;
+    text-align: center;
+    width: 303px;
+    height: 50px;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: .25rem;
+    background-color: #f8f9fb;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.input-file-wrap label {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+input[type='file'] {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+}
+
+.input-file-sym {
+    font-size: 1.2rem;
+    color: green;
+}
+
+.input-file-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
